# VisionAutoTest

./: .gitignore  README.md
backend/: .env.example  .env.test.sample  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-lock-dev.txt  requirements-lock.txt
backend/alembic/: env.py
backend/alembic/versions/: 3f8c1f4f2a5d_baseline_adoption_traceability.py  8d4f52f7d9f1_report_artifact_links.py  a1b2c3d4e5f6_test_run_description.py  b2c4a1e9d7f3_component_steps_timeout_retry.py  c5bd66b5f125_initial_schema.py  e7b3c1a4d9f2_template_ocr_results.py  f3c9d7b1a2e4_conditional_branch_step_result_metadata.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  utils.py
backend/app/api/v1/: cases.py  (+12 more)
backend/app/core/: config.py  http.py  security.py  storage.py
backend/app/db/: bootstrap.py  migrations.py  session.py
backend/app/models/: __init__.py  assets.py  base.py  cases.py  entities.py  execution.py  iam.py  workspace.py
backend/app/schemas/: __init__.py  assets.py  cases.py  contracts.py  execution.py  iam.py  workspace.py
backend/app/services/: assets.py  branch_validator.py  case_service_common.py  cases.py  component_service.py  execution.py  execution_readiness.py  execution_report.py  execution_status.py  execution_steps.py  helpers.py  iam.py  step_payload_validator.py  step_validation_common.py  suite_service.py  test_case_service.py  workspace.py
backend/app/workers/: __init__.py  browser.py  browser_branching.py  browser_locators.py  browser_payloads.py  browser_step_handlers.py  browser_step_registry.py  dispatcher.py  execution.py  runner.py  vision.py
backend/scripts/: run_pytest.sh
backend/tests/: conftest.py  test_app.py
backend/tests/api/: test_assets.py  test_baseline_adoption.py  test_cases.py  test_executions.py  test_iam.py  test_system.py  test_workspaces.py
backend/tests/bootstrap/: test_demo_seed.py
backend/tests/support/: api_helpers.py  constants.py  fakes.py  runtime.py
(+119 files in other folders)
