[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionautotest-backend"
version = "0.1.0"
description = "VisionAutoTest MVP backend scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2.0",
  "cryptography>=45.0,<46.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.12,<3.0",
  "PyJWT>=2.10,<3.0",
  "playwright>=1.52,<2.0",
  "opencv-python-headless>=4.10,<5.0",
  "paddleocr>=2.8,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "starlette>=0.46,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "playwright: tests that require a real Playwright/Chromium runtime",
  "vision: tests that cover OCR, visual assertion, or baseline adoption flows",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
vat-db-bootstrap = "app.db.bootstrap:main"
vat-worker-run-queued = "app.workers.runner:main"
